fixed navbar to be aligned at top of page with margin-top

--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@ footer {
     opacity: 0.6;
     color: white;
     text-transform: uppercase;
+    margin-top: -2px;
 }
 
 #nav.scroll {
